<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/list"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="10dp">

	<RelativeLayout
		android:id="@+id/listlabels"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/header_quant"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_alignParentEnd="true"
			android:paddingEnd="6sp"
			android:text="@string/aantal"
			android:textColor="?attr/colorAccent"
			android:textSize="18sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:gravity="start"
			android:text="@string/bestelling"
			android:textColor="?attr/colorAccent"
			android:textSize="18sp"
			android:textStyle="bold" />
	</RelativeLayout>

	<ListView
		android:id="@+id/thelist"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1" />

	<TextView
		android:id="@+id/footer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/totaal"
		android:textColor="?attr/colorAccent"
		android:textSize="18sp"
		android:textStyle="italic" />
</LinearLayout>
