<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/naam"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#dddddd"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789,."
            android:ems="10"
            android:hint="@string/prijs"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="#dddddd"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtEUR"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:labelFor="@id/editPrice"
            android:singleLine="true"
            android:text="@string/eur"
            android:textAlignment="center"
            android:textColor="#dddddd"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>